--- a/Views/Admin/Dashboard.cshtml
+++ b/Views/Admin/Dashboard.cshtml
@@ -150,12 +150,13 @@
                             datasets: [{
                                 data: [@ViewBag.CertificationInterested, @ViewBag.CertificationNotInterested],
                                 backgroundColor: [
-                                    '#28a745',
-                                    '#dc3545'
+                                    '#22c55e',
+                                    '#f37373'
                                 ],
                                 borderColor: '#fff',
                                 borderWidth: 3,
-                                hoverOffset: 10
+                                hoverOffset: 10,
+                                offset: [20, 0]
                             }]
                         },
                         options: {
